AI Math Tutor-20260309T045651Z-3-001/AI Math Tutor/ai_math_tutor/debug2_out.txt
Using CPU. Note: This module is much faster with a GPU.
C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\torch\utils\data\dataloader.py:775: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.
  super().__init__(loader)
Heuristic sympify failed: Sympify of expression 'could not parse '12 x**2 - 3*x + 2'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1)
ValueError: Error from parse_expr with transformed code: "Integer (12 )Symbol ('x' )**Integer (2 )-Integer (3 )*Symbol ('x' )+Integer (2 )"

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\sympy\core\sympify.py", line 507, in sympify
    expr = parse_expr(a, local_dict=locals, transformations=transformations, evaluate=evaluate)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\sympy\parsing\sympy_parser.py", line 1090, in parse_expr
    raise e from ValueError(f"Error from parse_expr with transformed code: {code!r}")
  File "C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\sympy\parsing\sympy_parser.py", line 1081, in parse_expr
    rv = eval_expr(code, local_dict, global_dict)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\sympy\parsing\sympy_parser.py", line 905, in eval_expr
    expr = eval(
           ^^^^^
  File "<string>", line 1
    Integer (12 )Symbol ('x' )**Integer (2 )-Integer (3 )*Symbol ('x' )+Integer (2 )
                 ^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\MADESH.A\Downloads\AI Math Tutor-20260309T045651Z-3-001\AI Math Tutor\ai_math_tutor\solver\equation_solver.py", line 52, in parse_latex_to_sympy
    left = sympify(left_s.strip())
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\MADESH.A\AppData\Local\Programs\Python\Python311\Lib\site-packages\sympy\core\sympify.py", line 509, in sympify
    raise SympifyError('could not parse %r' % a, exc)
sympy.core.sympify.SympifyError: Sympify of expression 'could not parse '12 x**2 - 3*x + 2'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1)
RAW: '12 X^2 - 3x + 2 = 0'
LATEX: '12 X^2 - 3x + 2 = 0'
ERROR TYPE: <class 'sympy.core.sympify.SympifyError'>
ERROR MSG: Sympify of expression 'could not parse '12 x**2 - 3*x + 2'' failed, because of exception being raised:
SyntaxError: invalid syntax (<string>, line 1)
